fix: add a scrollbar gutter to the popup
Fixes #1314.

--- a/css/popup.css
+++ b/css/popup.css
@@ -508,6 +508,7 @@
 .window .content .expandable {
   overflow: auto;
   overscroll-behavior: contain;
+  scrollbar-gutter: stable;
 }
 
 @supports (scrollbar-width: thin) {
